migration and autogenrate doc
