# routes/api.php
@@ -17,10 +17,3 @@ use Illuminate\Support\Facades\Route;
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
-
-Route::group(['namespace' => 'App\Http\Controllers\Api'], function()
-{   
-    Route::apiResource('/category','Product\CategoryController'); 
-    Route::apiResource('/blog','Product\BlogController'); 
-
-});
